--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
     	<meta name="description" content="">
     	<meta name="viewport" content="width=device-width, initial-scale=1">
-    	<title>Article List</title>
+    	<title>Notes App</title>
 
     	<link href='http://fonts.googleapis.com/css?family=Lato:100,400,700' rel='stylesheet' type='text/css'>
     	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
