--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js"></script>
 	<script src="js/jquery.reveal.js"></script>
+	<script src="js/backbone.localStorage.js"></script>
 	<script src="js/app.js"></script>
 
 </body>
