--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<h1>My Notes</h1>
 			<a href="#" id="add-note" class="button">+</a>
 		</header>
-		<p class="placeholder">You haven't added any notes yet.</p>
+		<p id="welcome-message">You haven't added any notes yet.</p>
 		<ul id="note-list"></ul>
 	</div>
 
@@ -60,6 +60,7 @@
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js"></script>
 	<script src="js/jquery.reveal.js"></script>
+	<script src="js/jquery.sortable.js"></script>
 	<script src="js/backbone.localStorage.js"></script>
 	<script src="js/app.js"></script>
 
