Only show edit instructions if a note exists.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 			<h1>My Notes</h1>
 			<a href="#" id="add-note" class="button">+</a>
 		</header>
-		<p id="welcome-message">You haven't added any notes yet.</p>
+		<p id="welcome-message" class="-active">You haven't added any notes yet.</p>
+		<p id="instructions">Double-click notes to edit</p>
 		<ul id="note-list"></ul>
 	</div>
 
