UI tweaks. Removed compiled css from repo.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<a href="#" id="add-note" class="button">+</a>
 		</header>
 		<p id="welcome-message">You haven't added any notes yet.</p>
-		<p id="instructions">Double-click notes to edit</p>
+		<p id="instructions">Double-click notes to edit. Drag to rearrange.</p>
 		<ul id="note-list"></ul>
 	</div>
 
